--- a/templates/hospital/admin_dashboard_cards.html
+++ b/templates/hospital/admin_dashboard_cards.html
@@ -155,7 +155,8 @@
         <div class="col-md-8 market-update-left">
           <h3>{{patientcount}}</h3>
           <h4>Total Patient</h4>
-          <p>Wants to Admit : {{pendingpatientcount}}</p>
+          <!-- <p>Wants to Admit : {{pendingpatientcount}}</p> -->
+          <br>
         </div>
         <div class="col-md-4 market-update-right">
           <i class="fa fa-user-o"></i>
@@ -168,7 +169,8 @@
         <div class="col-md-8 market-update-left">
           <h3>{{appointmentcount}}</h3>
           <h4>Total Appointment</h4>
-          <p>Approve Appointments :{{pendingappointmentcount}} </p>
+          <!-- <p>Approve Appointments :{{pendingappointmentcount}} </p> -->
+          <br>
         </div>
         <div class="col-md-4 market-update-right">
           <i class="fa fa-calendar"> </i>
