--- a/templates/hospital/index.html
+++ b/templates/hospital/index.html
@@ -43,6 +43,10 @@
       animation: glow 1s ease-in-out infinite alternate;
     }
 
+    .dot{
+      color: transparent;
+    }
+
     @-webkit-keyframes glow {
       from {
         text-shadow: 0 0 10px #eeeeee, 0 0 20px #000000, 0 0 30px #000000, 0 0 40px #000000, 0 0 50px #9554b3, 0 0 60px #9554b3, 0 0 70px #9554b3;
@@ -68,8 +72,8 @@
 
   <p class="lead">
 
-    <p>.</p>
-    <p>.</p>
+    <p class="dot"> .</p>
+    <p class="dot"> .</p>
     <!-- <a class="btn btn-primary btn-lg" href="/patientclick" class="glow" role="button">Beyond Healthcare.</a> -->
     
   </p>
